--- a/assets/style/index_2.css
+++ b/assets/style/index_2.css
@@ -22,13 +22,13 @@
     right: 0px; 
   }
   .owl-prev::before, .owl-next::before {
-    content: '\f104'; /* Font Awesome left arrow */
-    font-family: "Font Awesome 5 Free"; /* Assuming Font Awesome is loaded */
+    content: '\f104';
+    font-family: "Font Awesome 5 Free"; 
     font-weight: 900;
     color: #000;
   }
   .owl-next::before {
-    content: '\f105'; /* Font Awesome right arrow */
+    content: '\f105';
   }
 * {
   box-sizing: border-box;
@@ -41,32 +41,7 @@ html {
   
 }
 
-/*
-===========SAMPLE==============
 
-.img-view{
-   background: rgba(85, 84, 84, 0.322); 
-   position: fixed;
-   height: 100% ;
-   width:100%;
-   z-index: 10;
-   display: grid;
-   place-items: center;
-   backdrop-filter: blur(3px);
-
-}
-.img-view i{
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: white;
-    padding: 2px 10px;
-    border-radius: 50%;
-    text-align: center;
-    cursor: pointer;
-
-} 
-    */
 :root {
 
   --clr-primary: #fafafa;
@@ -155,14 +130,7 @@ body{
     border-radius: 0 10px 0 0;
     
 }
-/*.sidebar:hover{
-    height: 100dvh;
-    width: 95px;
-    padding: 1rem ;
-    transition: all 0.5s ease;
-  
-    overflow: visible;
-}*/
+
 .active{
     background-color: var(--clr-tetradic);
 }
@@ -741,7 +709,7 @@ header{
     position: absolute;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Cover the entire container */
+    object-fit: cover; 
     filter: opacity(1);
     
     z-index: -1;
